tests/init/neg/leak-warm.check
-- Error: tests/init/neg/leak-warm.scala:18:26 -------------------------------------------------------------------------
18 |    val l: List[A] = List(c, d) // error // error
   |                          ^
   |           Cannot prove that the value is fully initialized. May only use initialized value as method arguments.
-- Error: tests/init/neg/leak-warm.scala:18:29 -------------------------------------------------------------------------
18 |    val l: List[A] = List(c, d) // error // error
   |                             ^
   |           Cannot prove that the value is fully initialized. May only use initialized value as method arguments.
